[package]
name = "qbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
bincode = "1.3.3"
clap = { version = "4.3.16", features = ["derive"] }
futures-util = "0.3.28"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.177", features = ["derive"] }
slog = "2.7.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"] }
tokio-tungstenite = "0.20.0"
warp = "0.3.5"
